trying to fix nav border alignment issue

--- a/source/stylesheets/components/_nav.sass
+++ b/source/stylesheets/components/_nav.sass
@@ -47,11 +47,11 @@ nav
   color: $black
   button
     font-size: rem(12)
-    margin: 0 auto rem(-5)
+    margin: 0 auto rem(-6)
     text-align: center
     display: inline-block
     float: left
-    padding: rem(20) 0 rem(16)
+    padding: rem(20) 0 rem(17)
     +media($medium)
       font-size: rem(14)
     &:hover, &:active, &:focus, &.is-checked
@@ -101,7 +101,7 @@ nav
       margin: 0
   h6
     display: inline-block
-    padding: rem(20) 0 rem(15)
+    padding: rem(20) 0 rem(17)
     margin: 0
     border-bottom: solid rem(6) $yellow
     margin-bottom: rem(-6)
